// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SavedSearchControls render the SavedSearchControls should render dirty 1`] = `
<button
  className="Button__StyledButton-c9cbmb-0 iWqiEF btn btn-default"
  disabled={false}
  onClick={[Function]}
  title="Unsaved changes"
  type="button"
>
  <Icon
    name="star"
    style={
      Object {
        "color": "#ffc107",
      }
    }
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="star"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      style={
        Object {
          "color": "#ffc107",
        }
      }
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star fa-w-18 "
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={
          Object {
            "color": "#ffc107",
          }
        }
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </FontAwesomeIcon>
  </Icon>
   Save
</button>
`;

exports[`SavedSearchControls render the SavedSearchControls should render not dirty 1`] = `
<button
  className="Button__StyledButton-c9cbmb-0 iWqiEF btn btn-default"
  disabled={false}
  onClick={[Function]}
  title="Saved search"
  type="button"
>
  <Icon
    name="star"
    style={
      Object {
        "color": "#007bff",
      }
    }
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="star"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      style={
        Object {
          "color": "#007bff",
        }
      }
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star fa-w-18 "
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={
          Object {
            "color": "#007bff",
          }
        }
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </FontAwesomeIcon>
  </Icon>
   Save
</button>
`;

exports[`SavedSearchControls render the SavedSearchControls should render not dirty with unsaved view 1`] = `
<button
  className="Button__StyledButton-c9cbmb-0 iWqiEF btn btn-default"
  disabled={false}
  onClick={[Function]}
  title="Save search"
  type="button"
>
  <Icon
    name="star-o"
    style={
      Object {
        "color": "",
      }
    }
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="star"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      style={
        Object {
          "color": "",
        }
      }
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star fa-w-18 "
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={
          Object {
            "color": "",
          }
        }
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </FontAwesomeIcon>
  </Icon>
   Save
</button>
`;
